tests/NormalTests/paczka1/fuzzy1/80887531.err
Error in line 12: TyBoM0 A868 81,7
Error in line 15: nkQqF7YwH A331 74,9
Error in line 10: AoRwp9HKx A331 18,0
Error in line 28: TyBoM0 A244 655,8
Error in line 17: ZY7hKqRG8 A868 82,2
Error in line 35: TyBoM0 S781 151,4
Error in line 32: ZY7hKqRG8 A244 45,9
Error in line 31: A244 S781 176,4
